styles.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: Arial, Helvetica, sans-serif;
}

html{
    scroll-snap-type: y mandatory;
}

body{
    background-color: white;
    width: 100vw;
    height: 100vh;
}

header, footer{
    color: white;
    background: black;
}

.propic { 
    height: 80px;
    border-radius: 50%;
    text-align: left;
}

header, section, footer{
    scroll-snap-align: start;
}

header{
    display: flex;
    align-items: center;
    justify-content: center;
    height: 80px;
    top: 0;
    left: 0;
}

section{
    padding: 20px;
    width: 100vw;
    min-height: 500px;
    font-size: 1.5rem;
    display: flex;
    align-items: center;
    justify-content: center;
}

footer{
    height: 500px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-around;
}

#sect1, #sect2 {
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
}

#sect1{ background-image: url("img/img597.JPG"); }
#sect2{ background-image: url("img/img604.JPG"); }

.hidden {
    opacity: 0;
    filter: blur(5px);
    transform: translateX(-100%);
    transition: all 1s;
    display: flex;
    align-items: center;
    justify-content: space-evenly;
    height: 100%;
}

.show{
    opacity: 1;
    filter: blur(0);
    transform: translateX(0);
}

.box{
    width: 400px;
    height: 500px;
    border-radius: 10px;
    box-shadow: 0 5px 30px 0;
    background-color: rgba(255, 255, 255, 0.4);
    -webkit-backdrop-filter: blur(5px);
    backdrop-filter: blur(5px);
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-around;
    .propic{
        width: 50%;
        height: auto;
        border-radius: 50%;
    }
}

.contacts{
    display: flex;
    flex-direction: column;
    text-align: left;
}

.aBtn{
    text-decoration: none;
    color: white;
    padding: 10px;
    border-radius: 25px;
    background-color: black;
    cursor: pointer;
}

.description {
    text-align: center;
    padding: 10px;
}

@media only screen and (max-width: 768px) {
    section{
        height: 100vh;
    }
}

